finished cleaning death related data

--- a/Death Data Cleaning.ipynb
+++ b/Death Data Cleaning.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning All death data and OD death data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All Death Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +106,7 @@
        "4  Pennsylvania        2004  final       126602"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +207,7 @@
        "98        Beaver        2018  projected         2185"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +228,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +314,7 @@
        "Beaver               2185"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,11 +327,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "finished_deaths_df.to_csv(\"clean data/2018_deaths_clean\")"
+    "finished_deaths_df.to_csv(\"clean data/2018_deaths_clean.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OD Death Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_death_df = pd.read_csv(\"cleaned_od_death_2018.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_death_df = od_death_df.drop(['Year', 'Unnamed: 0', 'County Code Number', 'Suppression Information'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Type of Overdose Death</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Allegheny</td>\n",
+       "      <td>411.0</td>\n",
+       "      <td>Opioid Overdose Deaths</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Juniata</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Opioid Overdose Deaths</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adams</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Any Drug Overdose Deaths</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cumberland</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>Opioid Overdose Deaths</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Northampton</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>Opioid Overdose Deaths</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        County  Count    Type of Overdose Death\n",
+       "0    Allegheny  411.0    Opioid Overdose Deaths\n",
+       "1      Juniata    1.0    Opioid Overdose Deaths\n",
+       "2        Adams   16.0  Any Drug Overdose Deaths\n",
+       "3   Cumberland   46.0    Opioid Overdose Deaths\n",
+       "4  Northampton   57.0    Opioid Overdose Deaths"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od_death_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_death_any_overdose = od_death_df.loc[od_death_df['Type of Overdose Death'] == 'Any Drug Overdose Deaths']\n",
+    "od_death_opioid_overdose = od_death_df.loc[od_death_df['Type of Overdose Death'] == 'Opioid Overdose Deaths']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_death_any_overdose = od_death_any_overdose.drop(columns='Type of Overdose Death')\n",
+    "# od_death_any_overdose = od_death_any_overdose.set_index('County')\n",
+    "\n",
+    "od_death_opioid_overdose = od_death_opioid_overdose.drop(columns='Type of Overdose Death')\n",
+    "# od_death_opioid_overdose = od_death_opioid_overdose.set_index('County')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Any Drug Overdose Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adams</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Berks</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cambria</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sullivan</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Mercer</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     County  Any Drug Overdose Deaths\n",
+       "2     Adams                      16.0\n",
+       "5     Berks                      85.0\n",
+       "7   Cambria                      63.0\n",
+       "8  Sullivan                       0.0\n",
+       "9    Mercer                      51.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od_death_any_overdose = od_death_any_overdose.sort_index()\n",
+    "od_death_any_overdose = od_death_any_overdose.rename(columns={'Count':'Any Drug Overdose Deaths'})\n",
+    "od_death_any_overdose.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Opioid Overdose Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Allegheny</td>\n",
+       "      <td>411.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Juniata</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cumberland</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Northampton</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Potter</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        County  Opioid Overdose Deaths\n",
+       "0    Allegheny                   411.0\n",
+       "1      Juniata                     1.0\n",
+       "3   Cumberland                    46.0\n",
+       "4  Northampton                    57.0\n",
+       "6       Potter                     0.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od_death_opioid_overdose = od_death_opioid_overdose.sort_index()\n",
+    "od_death_opioid_overdose = od_death_opioid_overdose.rename(columns={'Count' : 'Opioid Overdose Deaths'})\n",
+    "od_death_opioid_overdose.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_deaths_finished = od_death_any_overdose.merge(od_death_opioid_overdose, on='County')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Any Drug Overdose Deaths</th>\n",
+       "      <th>Opioid Overdose Deaths</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>County</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Adams</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Allegheny</th>\n",
+       "      <td>487.0</td>\n",
+       "      <td>411.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Armstrong</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Beaver</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bedford</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Any Drug Overdose Deaths  Opioid Overdose Deaths\n",
+       "County                                                     \n",
+       "Adams                          16.0                    16.0\n",
+       "Allegheny                     487.0                   411.0\n",
+       "Armstrong                      22.0                    21.0\n",
+       "Beaver                         43.0                    40.0\n",
+       "Bedford                         1.0                     1.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od_deaths_finished = od_deaths_finished.set_index('County')\n",
+    "od_deaths_finished = od_deaths_finished.sort_index()\n",
+    "od_deaths_finished.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od_deaths_finished.to_csv('clean data/OD_Deaths_Cleaned_More.csv')"
    ]
   },
   {
